# conan-the-caveman-android

./: .gitignore  .gitmodules  CHANGELOG.md  Makefile  README.md  build.gradle  settings.gradle
.github/workflows/: android-build.yml  branch-name-check.yml  pr-validate.yml
app/: build.gradle
app/jni/: CMakeLists.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/stormengine/conan/: ConanActivity.java
data/: conan.map  conan_colliders.map
include/: stormengine2
specs/input/: gamepadLogic.spec.cpp  virtualGamepad.spec.cpp
specs/level/: colliderMap.spec.cpp
specs/physics/: platformer.spec.cpp
specs/ui/: menuButton.spec.cpp
src/: game.cpp  game.h  main.cpp
src/input/: gamepad.h  gamepadLogic.h  touchControls.h  virtualGamepad.h
src/level/: colliderMap.h
src/physics/: platformer.h
src/sprites/: playerFrames.h
src/states/: gameOverState.cpp  gameOverState.h  menuState.cpp  menuState.h  pauseState.cpp  pauseState.h  playState.cpp  playState.h
src/ui/: menuButton.h  uiButton.h
tools/: tmx2map.py
